--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -66,3 +66,11 @@
     display: flex;
     flex-direction: column;
 }
+
+.hidden {
+    display: none;
+  }
+  
+  .show {
+    display: block;
+  }
